--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,9 +8,9 @@ body{
     font-family: 'Lato', sans-serif;
     background-color: #ebf9ff;
 }
-header{
+/*header{
     background-color: #ade5e5;
-}
+}*/
 header ul{
     list-style: none;
     font-size:0;
@@ -63,14 +63,10 @@ article>img{
     height: 200px;
     object-fit: cover; /* sirve para ajustar la imagen recortando el sobrante*/
 }
-
-footer{
-    text-align: center;
-    margin: 50px 20%;
-}
+/*
 footer img{
     margin: 0 5px;
-}
+*/
 main>section>ol{
     width: 100px;
     margin: auto;
@@ -86,10 +82,10 @@ table caption{
 main>section>p{
     margin-top: 10px;
 }
-#logo{
+/*#logo{
     padding: 25px 0px 15px 0px;
-    background-color: #95d9d9;
-}
+    
+}*/
 label {
     width: 135px;
     display: inline-block;
@@ -101,4 +97,48 @@ input, select {
 main>h2,main>section>h1, main>h1{
     margin: 20px;
 }
+.container{
+    display: grid;
+    grid-template-rows: 165px auto 120px
+}
+.logoMasNav{
+    display: grid;
+    grid-template-rows: 125px 40px;
+}
+#logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #95d9d9;
+}
+.navBar{
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    justify-content: center;
+    background-color: #ade5e5;
+}
+footer{
+    margin: 15px;
+}
+.redes{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+    margin: 10px;
+}
+@media screen and (max-width: 768px) {
+    .portada{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+      
+    main img{
+        width: 50%;
+    } 
+}    
+
+
 
