--- a/css/estilo.css
+++ b/css/estilo.css
@@ -130,11 +130,13 @@ footer{
 }
 @media screen and (max-width: 768px) {
     .portada{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-      
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     }
+    article{
+        width: 100%;
+    }    
     main img{
         width: 50%;
     } 
