--- a/css/estilo.css
+++ b/css/estilo.css
@@ -37,7 +37,23 @@ main{
     min-height: calc(100vh - 363px);
 }
 h1{
-    font-size: 25px;
+    font-size: 35px;
+    animation: Titulos ease-in-out 1s;
+}
+@keyframes Titulos{
+    0% { 
+        transform: scale(0);
+        opacity: 0; 
+    }  
+    50%{
+        transform: scale(1.1);
+    }
+    65%{
+        transform: scale(1);
+    }  
+    100%{
+         opacity: 1;
+    }
 }
 section.portada{
     font-size: 0;  /*para que no me el espaciado de los articles*/
@@ -76,8 +92,10 @@ table{
 }
 table caption{
     font-weight: bold;
-    font-size: 23px;
+    font-size: 26px;
     line-height: 70px;
+    animation: Titulos ease-in-out 1s;
+    
 }
 main>section>p{
     margin-top: 10px;
@@ -101,7 +119,7 @@ main>h2,main>section>h1, main>h1{
     display: grid;
     grid-template-rows: 165px auto 120px
 }
-.logoMasNav{
+header{
     display: grid;
     grid-template-rows: 125px 40px;
 }
@@ -111,7 +129,7 @@ main>h2,main>section>h1, main>h1{
     align-items: center;
     background-color: #95d9d9;
 }
-.navBar{
+nav ul{
     display: flex;
     flex-direction: row;
     gap: 25px;
@@ -141,6 +159,10 @@ footer{
         width: 50%;
     } 
 }    
+img:hover{
+    transform: scale(1.05) ;
+    transition-duration: 0.5s;
+}
 
 
 
