--- a/css/estilo.css
+++ b/css/estilo.css
@@ -89,10 +89,11 @@ main>section>ol{
 }
 table{
     margin: auto;
+    margin-top: 30px;
 }
-table caption{
+caption{
     font-weight: bold;
-    font-size: 26px;
+    font-size: 24px;
     line-height: 70px;
     animation: Titulos ease-in-out 1s;
     
