--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "./variables/variables";
+@import "./mixines";
 @import "./bases/estilosGenerales.scss";
 @import "./index";
 @import "./mediaquerie";
