--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,8 +1,10 @@
-/*colores*/
-$celeste: #ade5e5;
-$azul: rgb(0, 153, 255);
-$violeta: violet;
-$logo: #95d9d9;
+$colores: (
+    celeste: #ade5e5,
+    azul: rgb(0, 153, 255),
+    violeta: violet,
+    logo: #95d9d9,
+    background: #ebf9ff
+);
 
 
 
