--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,3 @@
-/*colores*/
 * {
   margin: 0;
   padding: 0;
@@ -62,8 +61,8 @@ header li a {
   font-size: 16px;
   line-height: 40px;
 }
-header li:hover {
-  color: violet;
+header li a:hover {
+  color: violet !important;
 }
 
 main h1, main h2 {
