--- a/scss/bases/estilosGenerales.scss
+++ b/scss/bases/estilosGenerales.scss
@@ -30,7 +30,23 @@ article{
 h1{
     font-size: 35px;
     animation: Titulos ease-in-out 1s;
-}             
+}
+@keyframes Titulos{
+    0% { 
+        transform: scale(0);
+        opacity: 0; 
+    }  
+    50%{
+        transform: scale(1.1);
+    }
+    65%{
+        transform: scale(1);
+    }  
+    100%{
+         opacity: 1;
+    }
+}
+       
 img:hover{
     transform: scale(1.05) ;
     transition-duration: 0.5s;
