--- a/scss/bases/estilosGenerales.scss
+++ b/scss/bases/estilosGenerales.scss
@@ -54,3 +54,20 @@ img:hover{
 footer{
     margin: 15px;
 }    
+main>table{
+    margin: auto;
+    margin-top: 30px;
+    caption-side: top;
+}
+caption{
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 70px;
+    animation: Titulos ease-in-out 1s;
+}    
+td, th, tr{
+    border-color: inherit;
+    border-style: solid;
+    border-width: 0;
+    padding: 15px;
+}
