--- a/css/estilos.css
+++ b/css/estilos.css
@@ -75,6 +75,7 @@ caption {
   font-size: 24px;
   line-height: 70px;
   animation: Titulos ease-in-out 1s;
+  text-align: center;
 }
 
 td, th, tr {
@@ -110,14 +111,14 @@ main .carousel img {
 main section h1 {
   margin: 20px;
 }
-main section .portada {
+.portada {
   font-size: 0;
   margin: 0 20%;
 }
-main section article .destacado {
+.destacado {
   width: 100%;
 }
-main section article .destacado img {
+.destacado img {
   height: auto;
 }
 main section article h2 {
