--- a/scss/bases/estilosGenerales.scss
+++ b/scss/bases/estilosGenerales.scss
@@ -64,6 +64,7 @@ caption{
     font-size: 24px;
     line-height: 70px;
     animation: Titulos ease-in-out 1s;
+    text-align: center;
 }    
 td, th, tr{
     border-color: inherit;
