--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,35 +108,50 @@ main h1, main h2 {
 main .carousel img {
   object-fit: cover;
 }
-main section h1 {
-  margin: 20px;
-}
-.portada {
+main section.portada {
   font-size: 0;
   margin: 0 20%;
 }
-.destacado {
+main section.portada article.destacado {
   width: 100%;
 }
-.destacado img {
+main section.portada article.destacado img {
   height: auto;
 }
-main section article h2 {
+main section.portada article h2 {
   margin: 10px;
 }
-main section article img {
+main section.portada article img {
   width: 100%;
   height: 200px;
   object-fit: cover;
 }
-main section .card {
+main section.container .card {
   align-items: center;
 }
-main section .card-img-top {
+main section.container .card-img-top {
   border-radius: 100%;
   width: 70px;
   height: auto;
   margin-top: 15px;
+}
+main section ol {
+  width: 100px;
+  margin: auto;
+}
+
+label {
+  width: 135px;
+  display: inline-block;
+  text-align: right;
+}
+
+input, select {
+  width: 130px;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 footer .redes {
@@ -144,16 +159,5 @@ footer .redes {
   margin: 10px;
   background-color: initial;
 }
-main>section>ol{
-  width: 100px;
-  margin: auto;
-}
-label {
-  width: 135px;
-  display: inline-block;
-  text-align: right;
-}
-input, select {
-  width: 130px;
-}
+
 /*# sourceMappingURL=estilos.css.map */
