--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -23,6 +23,7 @@ header{
           
     }
 }
+
 main{
     h1,h2{
         margin: 20px;
@@ -30,21 +31,17 @@ main{
     .carousel img{
         object-fit: cover;
     }
-    section{
-        h1{
-            margin: 20px;
-        }
-        .portada{
-            font-size: 0;  
-            margin: 0 20%;
+    section.portada{
+        font-size: 0;  
+        margin: 0 20%;
+        
+        article.destacado{
+            width: 100%;
+            img{
+                height: auto;
+            }    
         }
         article{
-            .destacado{
-                width: 100%;
-                img{
-                    height: auto;
-                }    
-            }
             h2{
                 margin: 10px;   
             }
@@ -54,7 +51,8 @@ main{
                 object-fit: cover; 
             }
         }
-        
+    }    
+    section.container{
         .card{
             align-items: center;
             }
@@ -65,6 +63,24 @@ main{
             margin-top: 15px;
         }
     }
+    section{ 
+        ol{
+            width: 100px;
+            margin: auto; 
+        }
+
+    }
+}
+label {
+    width: 135px;
+    display: inline-block;
+    text-align: right;
+}
+input, select {
+    width: 130px;
+}
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 footer{
     .redes{
@@ -74,3 +90,4 @@ footer{
         background-color: initial;
     }
 }
+
