--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,11 @@ header {
   background-color: #ade5e5;
 }
 
+.menuHamb {
+  padding-top: 0 !important;
+  z-index: 500;
+}
+
 #logo, footer .redes {
   display: flex;
   justify-content: center;
@@ -158,6 +163,51 @@ footer .redes {
   gap: 15px;
   margin: 10px;
   background-color: initial;
+}
+
+main .datos {
+  display: grid;
+  grid-template-columns: 50% 35%;
+  justify-content: center;
+  align-items: center;
+}
+main .datos .info {
+  margin: auto 10%;
+  border: solid 1px grey;
+}
+main .datos iframe {
+  margin: auto;
+}
+
+@media screen and (max-width: 680px) {
+  main .datos {
+    display: block;
+  }
+  main .datos .info {
+    margin: auto 20%;
+  }
+}
+@media screen and (max-width: 500px) {
+  td, th, tr {
+    padding: 0px;
+  }
+  table {
+    margin: 0%;
+  }
+}
+@media screen and (max-width: 720px) {
+  .cartas {
+    flex-direction: column;
+    align-items: center;
+  }
+  .portada {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .portada article {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=estilos.css.map */
