--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -90,4 +90,17 @@ footer{
         background-color: initial;
     }
 }
+main .datos{
+    display: grid;
+    grid-template-columns: 50% 35%;
+    justify-content: center;
+    align-items: center;
+           .info{
+            margin: auto 10%;
+            border: solid 1px grey;
+        }
+            iframe{
+                margin: auto;
+            }
+}
 
