--- a/scss/bases/estilosGenerales.scss
+++ b/scss/bases/estilosGenerales.scss
@@ -10,12 +10,8 @@ body{
 }   
 header{
     display: grid;
-    grid-template-rows: 125px 40px;
+    grid-template-rows: 125px auto;
     background-color: map-get($colores , celeste);
-    }
-.menuHamb{
-        padding-top: 0 !important;
-        z-index: 500;
     }
 
 #logo{
@@ -51,7 +47,7 @@ h1{
          opacity: 1;
     }
 } 
-       
+     
 img:hover{
     transform: scale(1.05) ;
     transition-duration: 0.5s;
@@ -76,4 +72,7 @@ td, th, tr{
     border-style: solid;
     border-width: 0;
     padding: 15px;
+}
+p{
+    font-size: initial;
 }
