--- a/scss/mediaquerie.scss
+++ b/scss/mediaquerie.scss
@@ -25,6 +25,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin: 0 10% !important;
         }
         .portada article{
             width: 100%;
